Fixes to run multiple years: memory errors from not deallocating at the end of a timestep, and from freeing up the size variable before using it to reallocate.  One change to the giac.template, which we don't use directly (as it turns out).  Also, fixed some errors in advancing the timestep for the iac clock - we sync with master clock at the start of the code, and actually call advance_timestep().

--- a/iac/bld/giac.template
+++ b/iac/bld/giac.template
@@ -347,6 +347,7 @@ cat >! iac_in <<EOF
  map_fglcmec_g2g= '\$DIN_LOC_ROOT/${map_landuse}'
  map_flai       = '\$DIN_LOC_ROOT/${map_landuse}'
  map_fharvest   = '\$DIN_LOC_ROOT/${map_landuse}'
+ map_fpeat      = '\$DIN_LOC_ROOT/${map_landuse}'
  map_flanwat    = '\$DIN_LOC_ROOT/${map_flanwat}'
  map_fvocef     = '\$DIN_LOC_ROOT/${map_fvocef}'
  map_fsoitex    = '\$DIN_LOC_ROOT/${map_fsoitex}'
