Increase efficiency and update carbon scaling
This part of the code is mainly about increasing efficiency.
The main processing in gcam2glm_run now runs only in years when
GCAM runs. The interpolation to each year happens each year.
Mksurfdata now fills the pft and harvest data in memory, rather
than it being read from the dynamic landuse timeseries file afterwards.
This required the dyn landuse file name to be a namelist variable.
The pft data are also moved to the previous value array each year.

--- a/iac/glm/glm.fut.conf
+++ b/iac/glm/glm.fut.conf
@@ -7,7 +7,7 @@ cat6              = inputs/future/RCP_MiniCam/
 foutput_dir        = output/
 
 [control]
-top level glm dir = DIN_LOC_ROOT/iac/giac/glm/
+top level glm dir = /compyfs/inputdata/iac/giac/glm/
 case name         = output
 runtype           = initial   # initial or restart
 start year        = 2015
@@ -80,17 +80,17 @@ output dir = $RUNDIR
 
 [hyde_datasets]
 
-hyde_crop_path = DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gcrop_1500-2005.nc
-hyde_othr_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gothr_1500-2005.nc
-hyde_past_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gpast_1500-2005.nc
-hyde_watr_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gwatr_850_851_half_degree.nc
-hyde_icew_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gicew_850_851_half_degree.nc
+hyde_crop_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gcrop_1500-2005.nc
+hyde_othr_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gothr_1500-2005.nc
+hyde_past_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gpast_1500-2005.nc
+hyde_watr_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gwatr_850_851_half_degree.nc
+hyde_icew_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/gicew_850_851_half_degree.nc
 
 [hyde_datasets_nodata]
 
-crop_nodata_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gcrop_1500-1510.nc
-other_nodata_path =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gothr_1500-1510.nc
-past_nodata_path  =DIN_LOC_ROOT/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gpast_1500-1510.nc
+crop_nodata_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gcrop_1500-1510.nc
+other_nodata_path = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gothr_1500-1510.nc
+past_nodata_path  = /compyfs/inputdata/iac/giac/glm/inputs/hyde_3.0/half_deg_grids/nodata/gpast_1500-1510.nc
 
 [future_datasets]
 
@@ -101,16 +101,16 @@ future_past_constructed_states = inputs/GCAM_Expt1_constructed_states_2005-2100/
 # these water and ice are on the way
 future_watr_constructed_states = inputs/hyde_3.0/half_deg_grids/gwatr_850_851_half_degree.nc
 future_icew_constructed_states = inputs/hyde_3.0/half_deg_grids/gicew_850_851_half_degree.nc
-updated_initial_state = DIN_LOC_ROOT/iac/giac/glm/inputs/initial/initial_state_LUH2_2015_v3.nc
+updated_initial_state = /compyfs/inputdata/iac/giac/glm/inputs/initial/initial_state_LUH2_2015_v3.nc
 
 [woodharvest_datasets]
 # woodarvest file is on the way
-woodharvest_file =DIN_LOC_ROOT/iac/giac/glm/inputs/other/wood_harvest/woodharvest_1500-2005.nc
-woodharvest_nodata_file =DIN_LOC_ROOT/iac/giac/glm/inputs/woodharvest_nodata_1500-2005.nc
-rcp_woodharvest_file =DIN_LOC_ROOT/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_minicam_rcp_2005_2100.nc
-rcp_woodharvest_nodata_file =DIN_LOC_ROOT/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_minicam_rcp_2005_2100.nc
-rcp_woodharvest_aez_file =DIN_LOC_ROOT/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_rcp45_aez_nd_2005_2100.nc
-rcp_woodharvest_nodata_aez_file =DIN_LOC_ROOT/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_rcp45_aez_nd_2005_2100.nc
+woodharvest_file = /compyfs/inputdata/iac/giac/glm/inputs/other/wood_harvest/woodharvest_1500-2005.nc
+woodharvest_nodata_file = /compyfs/inputdata/iac/giac/glm/inputs/woodharvest_nodata_1500-2005.nc
+rcp_woodharvest_file = /compyfs/inputdata/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_minicam_rcp_2005_2100.nc
+rcp_woodharvest_nodata_file = /compyfs/inputdata/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_minicam_rcp_2005_2100.nc
+rcp_woodharvest_aez_file = /compyfs/inputdata/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_rcp45_aez_nd_2005_2100.nc
+rcp_woodharvest_nodata_aez_file = /compyfs/inputdata/iac/giac/glm/inputs/other/wood_harvest/RCP/woodharvest_rcp45_aez_nd_2005_2100.nc
 
 [other_datasets]
 wh_region_codes_file   = inputs/other/wood_harvest/gcam_region_codes.txt
@@ -130,7 +130,7 @@ shiftcult_map  = inputs/other/shift_cult/shiftcult_LUH1format.txt
 regcodes_map     = inputs/other/wood_harvest/gcam_region_grid.txt # this is not used, and is the same as above
 gcodes_cont_map  = inputs/other/ccodes/gcodes_continent_half_deg_DUMMY.asc
 miami_biomass_file_vba = inputs/other/miami_biomass_v3/vba_LUH1format.txt
-miami_biomass_file_vnppa = inputs/other/miami_npp/npp_LUH1format.txt
+miami_biomass_file_vnppa = inputs/other/miami_npp/npp_LUH1format_v2.txt
 
 [debug options]
 smart_flow_bug_print         = 0
