Completed CO2 downscaling
The gcam_comp_mod call functions include more arguments to facilitate
restarts and optional convergence downscaling. Only linear
downscaling of CO2 has been verified, but not within the fortran
ehc code. New namelist options have been added, and the namelist
flag for passing co2 has been corrected in name. Note that the
compiler does not catch mismatches between the gcam_comp_mod
function arguments and those in the c++ wrapper. The co2 data
passed to the fortran ehc from gcam should be correct, and should be
copied correctly to the coupler variables, but this should be verified.
Runs do complete successfully.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "gcam"]
 	path = iac/gcam
 	url = git@github.com:JGCRI/gcam-core
-	branch = aldivi/gcam_gcam6
+	branch = aldivi/gcam_gcam6_merge_co2
