--- a/iac/bld/giac.template
+++ b/iac/bld/giac.template
@@ -330,9 +330,9 @@ cat >! iac_in <<EOF
  mksrf_fmax     = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/mksrf_fmax.070406.nc'
  mksrf_fglacier = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/mksrf_glacier.060929.nc'
  mksrf_furban   = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/mksrf_urban_3den_0.5x0.5_simyr2000.c090223_v1.nc'
- mksrf_fvegtyp  = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/pftlandusedyn.0.5x0.5.simyr1850-2005.c090630/mksrf_landuse_rc2000_c090630.nc'
+ mksrf_fvegtyp  = '/qfs/people/sinh210/wrk/user_inputdata/lnd/clm2/surfdata_map/mksrf_newcrop_c200813.nc'
  mksrf_fsoicol  = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/pftlandusedyn.0.5x0.5.simyr1850-2005.c090630/mksrf_soilcol_global_c090324.nc'
- mksrf_flai     = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/pftlandusedyn.0.5x0.5.simyr1850-2005.c090630/mksrf_lai_global_c090506.nc'
+ mksrf_flai     = '/qfs/people/sinh210/wrk/user_inputdata/lnd/clm2/surfdata_map/mksrf_lai34cft_simyr2000_c200622.nc'
  mksrf_fglctopo = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/mksrf_topo.10min.c080912.nc'
  mksrf_flndtopo = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/topodata_10min_USGS_071205.nc'
  mksrf_fvocef   = '\$DIN_LOC_ROOT/lnd/clm2/rawdata/mksrf_vocef.c060502.nc'
